# cdd-cpp

./: .dockerignore  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CMakeLists.txt  COMPLIANCE.md  DEVELOPING.md  FUTURE.md  Makefile  PUBLISH.md  PUBLISH_OUTPUT.md  README.md  USAGE.md  WASM.md  alpine.Dockerfile  debian.Dockerfile  make.bat  spec.json
.githooks/: pre-commit
.github/workflows/: ci.yml
src/classes/: emit.cpp  emit.hpp  emit_cli.cpp  emit_cli.hpp  emit_client.cpp  emit_client.hpp  parse.cpp  parse.hpp
src/cli/: main.cpp  sync.cpp
src/client_sdk/: emit.cpp  emit.hpp  parse.cpp  parse.hpp
src/client_sdk_cli/: emit.cpp  emit.hpp  parse.cpp  parse.hpp
src/docstrings/: emit.cpp  emit.hpp  parse.cpp  parse.hpp
src/functions/: emit.cpp  emit.hpp  parse.cpp  parse.hpp
src/google_discovery/: parse.cpp  parse.hpp
src/mocks/: emit.cpp  emit.hpp  parse.cpp  parse.hpp
src/models/: emit.cpp  emit.hpp  parse.cpp  parse.hpp
src/openapi/: emit.cpp  emit.hpp  models.hpp  parse.cpp  parse.hpp
src/openapi/upgraders/: upgrader.cpp  upgrader.hpp
src/orm/: emit.cpp  emit.hpp
src/routes/: emit.cpp  emit.hpp  parse.cpp  parse.hpp
src/server/: emit.cpp  emit.hpp  parse.cpp  parse.hpp
src/tests/: ast_test.cpp  classes.cpp  cli.cpp  client_sdk_cli_test.cpp  client_sdk_test.cpp  docstrings.cpp  emit.cpp  emit_client_test.cpp  functions.cpp  google_discovery.cpp  http.cpp  main.cpp  mocks.cpp  models.cpp  orm.cpp  parse.cpp  routes.cpp  server.cpp  sync_test.cpp  upgrader_test.cpp
src/utils/: cpp_ast.cpp  cpp_ast.hpp  cpp_parser.cpp  cpp_parser.hpp  http.cpp  http.hpp  httplib.h  json_writer.hpp
test_cpp/: example.cpp  test.sh
tools/: doc_coverage.py  generate_docs.py  test_coverage.py  update_badges.py
